<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:columnCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rowCount="9">

        <Button
            android:id="@+id/buttonA"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="3dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/a"
            android:textAlignment="center"
            android:textSize="40sp"
            app:layout_columnWeight="0.33"
            app:layout_rowWeight="0.11" />

        <Button
            android:id="@+id/buttonB"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="3dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/b"
            android:textAlignment="center"
            android:textSize="40sp"
            app:layout_columnWeight="0.33"
            app:layout_rowWeight="0.11" />

        <Button
            android:id="@+id/buttonC"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="3dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/c"
            android:textAlignment="center"
            android:textSize="40sp"
            app:layout_columnWeight="0.33"
            app:layout_rowWeight="0.11" />

        <Button
            android:id="@+id/buttonD"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="3dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/d"
            android:textAlignment="center"
            android:textSize="40sp"
            app:layout_columnWeight="0.33"
            app:layout_rowWeight="0.11" />

        <Button
            android:id="@+id/buttonE"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="3dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/e"
            android:textAlignment="center"
            android:textSize="40sp"
            app:layout_columnWeight="0.33"
            app:layout_rowWeight="0.11" />

        <Button
            android:id="@+id/buttonF"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="3dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/f"
            android:textAlignment="center"
            android:textSize="40sp"
            app:layout_columnWeight="0.33"
            app:layout_rowWeight="0.11" />

        <Button
            android:id="@+id/buttonG"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="3dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/g"
            android:textAlignment="center"
            android:textSize="40sp"
            app:layout_columnWeight="0.33"
            app:layout_rowWeight="0.11" />

        <Button
            android:id="@+id/buttonH"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="3dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/h"
            android:textAlignment="center"
            android:textSize="40sp"
            app:layout_columnWeight="0.33"
            app:layout_rowWeight="0.11" />

        <Button
            android:id="@+id/buttonI"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="3dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/i"
            android:textAlignment="center"
            android:textSize="40sp"
            app:layout_columnWeight="0.33"
            app:layout_rowWeight="0.11" />

        <Button
            android:id="@+id/buttonJ"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="3dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/j"
            android:textAlignment="center"
            android:textSize="40sp"
            app:layout_columnWeight="0.33"
            app:layout_rowWeight="0.11" />

        <Button
            android:id="@+id/buttonK"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="3dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/k"
            android:textAlignment="center"
            android:textSize="40sp"
            app:layout_columnWeight="0.33"
            app:layout_rowWeight="0.11" />

        <Button
            android:id="@+id/buttonL"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="3dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/l"
            android:textAlignment="center"
            android:textSize="40sp"
            app:layout_columnWeight="0.33"
            app:layout_rowWeight="0.11" />

        <Button
            android:id="@+id/buttonM"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="3dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/m"
            android:textAlignment="center"
            android:textSize="40sp"
            app:layout_columnWeight="0.33"
            app:layout_rowWeight="0.11" />

        <Button
            android:id="@+id/buttonN"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="3dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/n"
            android:textAlignment="center"
            android:textSize="40sp"
            app:layout_columnWeight="0.33"
            app:layout_rowWeight="0.11" />

        <Button
            android:id="@+id/buttonO"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="3dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/o"
            android:textAlignment="center"
            android:textSize="40sp"
            app:layout_columnWeight="0.33"
            app:layout_rowWeight="0.11" />

        <Button
            android:id="@+id/buttonP"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="3dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/p"
            android:textAlignment="center"
            android:textSize="40sp"
            app:layout_columnWeight="0.33"
            app:layout_rowWeight="0.11" />

        <Button
            android:id="@+id/buttonQ"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="3dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/q"
            android:textAlignment="center"
            android:textSize="40sp"
            app:layout_columnWeight="0.33"
            app:layout_rowWeight="0.11" />

        <Button
            android:id="@+id/buttonR"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="3dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/r"
            android:textAlignment="center"
            android:textSize="40sp"
            app:layout_columnWeight="0.33"
            app:layout_rowWeight="0.11" />

        <Button
            android:id="@+id/buttonS"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="3dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/s"
            android:textAlignment="center"
            android:textSize="40sp"
            app:layout_columnWeight="0.33"
            app:layout_rowWeight="0.11" />

        <Button
            android:id="@+id/buttonT"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="3dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/t"
            android:textAlignment="center"
            android:textSize="40sp"
            app:layout_columnWeight="0.33"
            app:layout_rowWeight="0.11" />

        <Button
            android:id="@+id/buttonU"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="3dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/u"
            android:textAlignment="center"
            android:textSize="40sp"
            app:layout_columnWeight="0.33"
            app:layout_rowWeight="0.11" />

        <Button
            android:id="@+id/buttonV"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="3dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/v"
            android:textAlignment="center"
            android:textSize="40sp"
            app:layout_columnWeight="0.33"
            app:layout_rowWeight="0.11" />

        <Button
            android:id="@+id/buttonW"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="3dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/w"
            android:textAlignment="center"
            android:textSize="40sp"
            app:layout_columnWeight="0.33"
            app:layout_rowWeight="0.11" />

        <Button
            android:id="@+id/buttonX"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="3dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/x"
            android:textAlignment="center"
            android:textSize="40sp"
            app:layout_columnWeight="0.33"
            app:layout_rowWeight="0.11" />

        <Button
            android:id="@+id/buttonY"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="3dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/y"
            android:textAlignment="center"
            android:textSize="40sp"
            app:layout_columnWeight="0.33"
            app:layout_rowWeight="0.11" />

        <Button
            android:id="@+id/buttonZ"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="3dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/z"
            android:textAlignment="center"
            android:textSize="40sp"
            app:layout_columnWeight="0.33"
            app:layout_rowWeight="0.11" />
    </androidx.gridlayout.widget.GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>